@@ -16,35 +16,29 @@
  */
 package org.apache.logging.log4j.core.appender.rolling;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.core.test.junit.LoggerContextSource;
+import org.apache.logging.log4j.test.junit.CleanUpDirectories;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.List;
 
-import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.core.test.junit.LoggerContextRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.RuleChain;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Tests that zero-padding in rolled files works correctly.
  */
+@Tag("sleepy")
 public class RolloverWithPaddingTest {
   private static final String CONFIG = "log4j-rolling-with-padding.xml";
   private static final String DIR = "target/rolling-with-padding";
 
-  private final LoggerContextRule loggerContextRule = LoggerContextRule.createShutdownTimeoutLoggerContextRule(CONFIG);
-
-  @Rule
-  public RuleChain chain = loggerContextRule.withCleanFoldersRule(DIR);
-
   @Test
-  public void testAppender() throws Exception {
-    final Logger logger = loggerContextRule.getLogger();
+  @CleanUpDirectories(DIR)
+  @LoggerContextSource(value = CONFIG, timeout = 10)
+  public void testAppender(final Logger logger) throws Exception {
     for (int i = 0; i < 10; ++i) {
       // 30 chars per message: each message triggers a rollover
       logger.fatal("This is a test message number " + i); // 30 chars:
@@ -52,12 +46,13 @@ public class RolloverWithPaddingTest {
     Thread.sleep(100); // Allow time for rollover to complete
 
     final File dir = new File(DIR);
-    assertTrue("Dir " + DIR + " should exist", dir.exists());
-      assertEquals("Dir " + DIR + " should contain files", 6, dir.listFiles().length);
+    assertTrue(dir.exists(), "Dir " + DIR + " should exist");
+      assertEquals(6, dir.listFiles().length, "Dir " + DIR + " should contain files");
 
     final File[] files = dir.listFiles();
-    final List<String> expected = Arrays.asList("rollingtest.log", "test-001.log", "test-002.log", "test-003.log", "test-004.log", "test-005.log");
-    assertEquals("Unexpected number of files", expected.size(), files.length);
+    assertNotNull(files);
+    final List<String> expected = List.of("rollingtest.log", "test-001.log", "test-002.log", "test-003.log", "test-004.log", "test-005.log");
+    assertEquals(expected.size(), files.length, "Unexpected number of files");
     for (final File file : files) {
       if (!expected.contains(file.getName())) {
         fail("unexpected file" + file);
